<resources>
    <string name="app_name">CheckServer</string>
    <string name="update">обновить</string>
    <string name="add">Добавить</string>
    <string name="serverName">имя сервера</string>
    <string name="hostname">хост</string>
    <string name="responseCode">код ответа</string>
    <string name="back">назад</string>
    <string name="save">сохранить</string>
    <string name="clear">очистить</string>
    <string name="nameAlreadyExist">Данное имя уже существует</string>
    <string name="AddBackAlertMessage">Для выхода без сохранения данных нажмите еще раз</string>
    <string name="port">порт</string>
    <string name="protocol">протокол</string>
    <string name="userDefault">использовать стандартный порт</string>
    <string name="check">проверить</string>
    <string name="expectedCode">ожидаемвый код:</string>
    <string name="actualCode">фактический ответ сервера:</string>
    <string name="edit">редактировать</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="no_internet_access">no connection</string>
    <string name="server_is_not_available">сервер не доступен</string>
    <string name="defaultPortPrompt">200</string>
    <string name="delete">удалить</string>
    <string name="history">история</string>
</resources>
