<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activates.AddServerActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serverName"
                android:textSize="@dimen/add_text_size"
                android:labelFor="@id/editText_serverName"/>

            <EditText
                android:id="@+id/editText_serverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hostname"
                android:textSize="@dimen/add_text_size"
                android:labelFor="@id/editText_hostname"/>

            <EditText
                android:id="@+id/editText_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textUri"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responseCode"
                android:textSize="@dimen/add_text_size"
                android:labelFor="@id/editText_responseCode"/>

            <EditText
                android:id="@+id/editText_responseCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textSize="@dimen/add_text_size"
                android:labelFor="@id/editText_port"/>

            <EditText
                android:id="@+id/editText_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:text="@string/defaultPortPrompt"
                android:enabled="false"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBox_isUserDefaultPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userDefault"
                android:textSize="@dimen/add_text_size"
                android:checked="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol"
                android:textSize="@dimen/add_text_size"/>

            <Spinner
                android:id="@+id/spinner_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check"
            android:textSize="@dimen/add_text_size"
            android:onClick="btnCheckClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/add_text_size"
            android:layout_weight="1"
            android:onClick="btnSaveClick"
            style="?attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="@dimen/add_text_size"
            android:layout_weight="1"
            android:onClick="btnCLearClick"
            style="?attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="@dimen/add_text_size"
            android:layout_weight="1"
            android:onClick="btnBackClick"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>